--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Art 109</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus provident autem harum quod quibusdam officiis nobis necessitatibus voluptatibus corrupti et itaque, soluta vero culpa libero consequatur ab qui iste exercitationem.</p>
+    <p>Wowzers, sit amet consectetur adipisicing elit. Delectus provident autem harum quod quibusdam officiis nobis necessitatibus voluptatibus corrupti et itaque, soluta vero culpa libero consequatur ab qui iste exercitationem.</p>
 </body>
 </html>
