--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Archive</title>
-</head>
-<body>
-    <h1>Art 109</h1>
-    <p>Wowzers, sit amet consectetur adipisicing elit. Delectus provident autem harum quod quibusdam officiis nobis necessitatibus voluptatibus corrupti et itaque, soluta vero culpa libero consequatur ab qui iste exercitationem.</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Lone Wanderer</title>
+    </head>
+    <!----->
+        <br><br>
+    <nav>
+        <ul>
+            <a href="#">Location 1</a>|
+            <a href="#">Location 2</a>|
+            <a href="#">Location 3</a>|
+            <a href="#">Location 4</a>|
+            <a href="#">Location 5</a>|
+        </ul>
+    </nav>
+    <!---Title/Location summary of the story--->
+    <body>
+        <h1>TITLE</h1>
+            <section>
+                <h2>Location:____</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi assumenda eius quisquam nobis vitae. Rem quae ea illo ipsam molestias esse amet quidem, labore voluptatum autem impedit et ab ullam?</p>
+            </section>
+    <!---Title/Location summary of the story--->    
+    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
+    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
+    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
+
+    <!---Comment/Review section (copy and paste format)--->
+            <section>
+                <h2>REVIEWS/COMMENTS</h2>
+                <p>Wowzers, sit amet consectetur adipisicing elit. Delectus provident autem harum quod quibusdam officiis nobis necessitatibus voluptatibus corrupti et itaque, soluta vero culpa libero consequatur ab qui iste exercitationem.</p>
+            </section>
+
+            <section>
+                <h2>REVIEWS/COMMENTS</h2>
+                <p>Wowzers, sit amet consectetur adipisicing elit. Delectus provident autem harum quod quibusdam officiis nobis necessitatibus voluptatibus corrupti et itaque, soluta vero culpa libero consequatur ab qui iste exercitationem.</p>
+            </section>
+        
+    </body>
 </html>
