Adding individual Template sheet
-separate template from index

--- a/site_template.html
+++ b/site_template.html
@@ -9,6 +9,7 @@
         <br><br>
     <nav>
         <ul>
+            <!--- Delete previous locations excet the one that follows and the beginning --->
             <a href="#">Location 1</a>|
             <a href="#">Location 2</a>|
             <a href="#">Location 3</a>|
@@ -18,15 +19,17 @@
     </nav>
     <!---Title/Location summary of the story--->
     <body>
-        <h1>The Traveling Lone Wanderer</h1>
+        <h1>Title</h1>
             <section>
-                <h2>╰┈➤Act 1:-ˏˋ Busy Beginnings ˊˎ </h2>
+                <h2>Location:</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi assumenda eius quisquam nobis vitae. Rem quae ea illo ipsam molestias esse amet quidem, labore voluptatum autem impedit et ab ullam?</p>
             </section>
     <!---Title/Location summary of the story--->    
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
+
+    <!--- 16:9 aspect ratio-->
+    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500"> <!--- 320px x 240px -->
+    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500"> <!--- 640px × 480px -->
+    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500"> <!--- 1280px x 720px -->
 
     <!---Comment/Review section (copy and paste format)--->
             <section>
