--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
         <br><br>
     <nav>
         <ul>
-            <a href="#">Location 1</a>|
-            <a href="#">Location 2</a>|
-            <a href="#">Location 3</a>|
-            <a href="#">Location 4</a>|
-            <a href="#">Location 5</a>|
+            <a href="#">Beginnings</a>|
+            <a href="#">Breath of Fresh Air</a>|
+
         </ul>
     </nav>
     <!---Title/Location summary of the story--->
     <body>
-        <h1>The Traveling Lone Wanderer</h1>
+        <h1> <font color="red">The Traveling Lone Wanderer</font></h1>
+        <p>︵‿︵‿︵‿︵︵‿︵‿︵‿︵︵‿︵‿︵‿︵︵‿︵‿︵‿︵</p>
             <section>
                 <h2>╰┈➤Act 1:-ˏˋ Busy Beginnings ˊˎ </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi assumenda eius quisquam nobis vitae. Rem quae ea illo ipsam molestias esse amet quidem, labore voluptatum autem impedit et ab ullam?</p>
+                <p>⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒</p>
+                <p>
+                    Steve has been working the same corporate job since he finished his Undergraduate at SJSU. It&#39s the same old and boring life of traveling to and from work. ONLY to go home and do more work. His life is boring and uneventful. He&#39s only ever stayed in the city, and never ventured out beyond the city he lives in now along the west coast. As he waits for his train, he thinks about the things he can possibly do; asking himself &quotWhat else is out there&quot than the mundane life he leads now.
+                </p>
+                <p>
+                    On a whim, he decides to quit his job and travel because he wants to properly live his life and experience the outside world.
+                </p>
             </section>
     <!---Title/Location summary of the story--->    
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500">
-
-    <!---Comment/Review section (copy and paste format)--->
-            <section>
-                <h2>REVIEWS/COMMENTS</h2>
-                <p>Wowzers, sit amet consectetur adipisicing elit. Delectus provident autem harum quod quibusdam officiis nobis necessitatibus voluptatibus corrupti et itaque, soluta vero culpa libero consequatur ab qui iste exercitationem.</p>
-            </section>
-
-            <section>
-                <h2>REVIEWS/COMMENTS</h2>
-                <p>Wowzers, sit amet consectetur adipisicing elit. Delectus provident autem harum quod quibusdam officiis nobis necessitatibus voluptatibus corrupti et itaque, soluta vero culpa libero consequatur ab qui iste exercitationem.</p>
-            </section>
-        
-    </body>
-
+    <picture>
+        <source media="(max-width: 239px)" srcset="/img/trainstation-240p.png">
+        <source media="(max-width: 639px)" srcset="/img/trainstation-480p.png">
+        <source media="(min-width: 1280px)" srcset="/img/trainstation-720p.png">
+        <img src="/img/trainstation-720p.png" alt="train station with people walking around"> 
+    </picture>
+    
+    <footer>
+        <p>⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒</p><br>
+        <p>HTML Archive Assignment: Alicia&nbspChi &amp Jozey&nbspNguyen</p><br>
+        <p>⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒</p><br>
+    </footer>
 </html>
