--- a/site_template.html
+++ b/site_template.html
@@ -27,9 +27,12 @@
     <!---Title/Location summary of the story--->    
 
     <!--- 16:9 aspect ratio-->
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500"> <!--- 320px x 240px -->
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500"> <!--- 640px × 480px -->
-    <img src="/img/PLACEHOLDER_IMG.png" alt="placeholder image" width="500"> <!--- 1280px x 720px -->
+    <picture>
+        <source media="(max-width: 239px)" srcset="/img/trainstation-240p.png"><!--- 320px x 240px -->
+        <source media="(max-width: 639px)" srcset="/img/trainstation-480p.png"><!--- 640px × 480px -->
+        <source media="(min-width: 1280px)" srcset="/img/trainstation-720p.png"><!--- 1280px x 720px -->
+        <img src="/img/trainstation-720p.png" alt="train station with people walking around"> 
+    </picture>
 
     <!---Comment/Review section (copy and paste format)--->
             <section>
@@ -43,5 +46,7 @@
             </section>
         
     </body>
-
+    <footer>
+        <p>HTML Archive Assignment: Alicia&nbspChi &amp Jozey&nbspNguyen </p>
+    </footer>
 </html>
