location 1: Rain Point Trail
-added images (240, 480, 720)
-create and write location 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <a href="#">Beginnings</a>|
-            <a href="#">Breath of Fresh Air</a>|
+            <a href="rain_point_trail.html">Breath of Fresh Air</a>|
 
         </ul>
     </nav>
