--- a/rain_point_trail.html
+++ b/rain_point_trail.html
@@ -17,14 +17,22 @@
     </nav>
     <!---Title/Location summary of the story--->
     <body>
-        <h1>➥Location #1 </h1>
+        <h1>➥Location #1: Rain Point Trail </h1>
             <p>Steve decides to try going somewhere more local and do an activity to dip his feet in the surrounding area outside of the big city. After browsing through endless sites online he comes across something interesting…</p>
-
+                <pre>                                                                                                                       new experiences</pre>
         <p>─────────── ⋆⋅☆⋅⋆ ──────────</p>
             <section>
-                <h1><font color="blue">┍────────────┓</font></h1>
-                <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rain Point Trail</h2>
-                <h1><font color="blue">┖────────────┙</font></h1>
+                <h1><font color="blue">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┍────────────┓</font></h1>
+<pre>
+    ┌───┐░░░░░░░┌───┐░░░░░░░┌┐░┌────┐░░░░░┌┐
+    │┌─┐│░░░░░░░│┌─┐│░░░░░░┌┘└┐│┌┐┌┐│░░░░░││
+    │└─┘├──┬┬─┐░│└─┘├──┬┬─┐└┐┌┘└┘││└┼─┬──┬┤│
+    │┌┐┌┤┌┐├┤┌┐┐│┌──┤┌┐├┤┌┐┐││░░░││░│┌┤┌┐├┤│
+    │││└┤┌┐│││││││░░│└┘││││││└┐░░││░│││┌┐││└
+    └┘└─┴┘└┴┴┘└┘└┘░░└──┴┴┘└┘└─┘░░└┘░└┘└┘└┴┴─
+    ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+    </pre>
+                <h1><font color="blue">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┖────────────┙</font></h1>
                 
                 <p>Rain Point Trail is a 2.4 KM in length and takes 1-2 hours to complete (one way). It has amazing view of the violet meadow, bring your camera! This trail is rated as easy so it is ideal for the novice hiker.</p>
             </section>
