Image fix (attempt 1)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <source media="(max-width: 239px)" srcset="/img/trainstation-240p.png">
         <source media="(max-width: 639px)" srcset="/img/trainstation-480p.png">
         <source media="(min-width: 1280px)" srcset="/img/trainstation-720p.png">
-        <img src="/img/trainstation-720p.png" alt="train station with people walking around"> 
+        <img src=".../img/trainstation-720p.png" alt="train station with people walking around"> 
     </picture>
     
     <footer>
