--- a/rain_point_trail.html
+++ b/rain_point_trail.html
@@ -44,7 +44,7 @@
         <source media="(max-width: 239px)" srcset="/img/rain-point-trail-240p.png"><!--- 320px x 240px -->
         <source media="(max-width: 639px)" srcset="/img/rain-point-trail-480p.png"><!--- 640px × 480px -->
         <source media="(min-width: 1280px)" srcset="/img/rain-point-trail-720p.png"><!--- 1280px x 720px -->
-        <img src="/img/rain-point-trail-720p.png" alt="train station with people walking around"> 
+        <img src=".../img/rain-point-trail-720p.png" alt="Rain Point Trail"> 
     </picture>
 
     <!---Comment/Review section (copy and paste format)--->
