Image fix (Attempt 3)
- attempt 2 still has it not working on site

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </section>
     <!---Title/Location summary of the story--->    
     <picture>
-        <source media="(max-width: 239px)" srcset="/img/trainstation-240p.png">
-        <source media="(max-width: 639px)" srcset="/img/trainstation-480p.png">
-        <source media="(min-width: 1280px)" srcset="/img/trainstation-720p.png">
-        <img src=".../img/trainstation-720p.png" alt="train station with people walking around"> 
+        <source media="(max-width: 239px)" srcset="img/trainstation-240p.png">
+        <source media="(max-width: 639px)" srcset="img/trainstation-480p.png">
+        <source media="(min-width: 1280px)" srcset="img/trainstation-720p.png">
+        <img src="img/trainstation-720p.png" alt="train station with people walking around"> 
     </picture>
     
     <footer>
