updated appearance of pages

--- a/lake_emerald.html
+++ b/lake_emerald.html
@@ -9,24 +9,24 @@
   <br /><br />
   <nav>
     <ul>
-      <a href="#">Location 1</a
+      <a href="#">Beginnings</a
       >|
-      <a href="#">Location 2</a
+      <a href="rain_point_trail.html">Rain Point Trail</a
       >|
-      <a href="#">Location 3</a
+      <a href="lake_emerald.html">Lake Emerald</a
       >|
-      <a href="#">Location 4</a
+      <a href="enchanted_forest.html">Enchanted Forest</a
       >|
       <a href="#">Location 5</a
       >|
     </ul>
   </nav>
   <!---Title/Location summary of the story--->
-  <body>
+  <body bgcolor="lightblue">
     <center>
-      <h1>The Traveling Lone Wanderer</h1>
+      <h1><font color="darkred">The Traveling Lone Wanderer</font></h1>
       <section>
-        <h2>╰┈➤ Act 2:-ˏˋ Laking it Away at Lake Emerald ˊˎ</h2>
+        <h2>╰┈➤ Location 2:-ˏˋ Laking it Away at Lake Emerald ˊˎ</h2>
         <p>
           As he roamed California, he stumbled upon this beautiful lake that had
           bright blue with a shade of green along the surface. The water is
@@ -58,15 +58,28 @@
     <!---Comment/Review section (copy and paste format)--->
     <section>
       <h2>REVIEWS/COMMENTS</h2>
-      <h3>Sophia Daniels</h3>
+      <h3>&nbsp;&nbsp;&nbsp; Sophia Daniels ⭐⭐⭐⭐</h3>
       <p>
         Wow, this place is astounding! Not only is the does it look magical, it
         feels magical.
       </p>
-      <h3>Mark Jacobs</h3>
+      <h3>&nbsp;&nbsp;&nbsp; Mark Jacobs ⭐⭐⭐</h3>
       <p>
         I want to stay here forever and never leave. It makes me feel alive and
         content that I feel like I have never lived before.
+      </p>
+      <h3 id="edit" contenteditable="true">
+        &nbsp;&nbsp;&nbsp; Your Name & Rating ⭐⭐⭐⭐⭐
+      </h3>
+      <p>
+        ┍─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┓
+      </p>
+      <p id="edit" contenteditable="true">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Leave your
+        thoughts here!
+      </p>
+      <p>
+        ┖─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┙
       </p>
     </section>
   </body>
