--- a/enchanted_forest.html
+++ b/enchanted_forest.html
@@ -9,24 +9,24 @@
   <br /><br />
   <nav>
     <ul>
-      <a href="#">Location 1</a
+      <a href="#">Beginnings</a
       >|
-      <a href="#">Location 2</a
+      <a href="rain_point_trail.html">Rain Point Trail</a
       >|
-      <a href="#">Location 3</a
+      <a href="lake_emerald.html">Lake Emerald</a
       >|
-      <a href="#">Location 4</a
+      <a href="enchanted_forest.html">Enchanted Forest</a
       >|
       <a href="#">Location 5</a
       >|
     </ul>
   </nav>
   <!---Title/Location summary of the story--->
-  <body>
+  <body bgcolor="lightblue">
     <center>
-      <h1>The Traveling Lone Wanderer</h1>
+      <h1><font color="darkred">The Traveling Lone Wanderer</font></h1>
       <section>
-        <h2>╰┈➤ Act 3:-ˏˋ Welcome to the Enchanted Forest ˊˎ</h2>
+        <h2>╰┈➤ Location 3:-ˏˋ Welcome to the Enchanted Forest ˊˎ</h2>
         <p>
           After a few weeks, he got to the most magical place he has come across
           so far, the Enchanted Forest. It next to the ocean with a white sand
@@ -34,7 +34,8 @@
           white foam between the water and the beach creating this curvature
           active pattern. The forest is so entrancing that he camped out there
           for almost a week because he enjoyed waking up to the sun beaming
-          through the trees towards his tent.
+          through the trees hitting his tent. When he goes out for a swim in the
+          ocean, he is refreshed and ready for a new day.
         </p>
       </section>
       <!---Title/Location summary of the story--->
@@ -69,10 +70,30 @@
     <!---Comment/Review section (copy and paste format)--->
     <section>
       <h2>REVIEWS/COMMENTS</h2>
-      <h3>Angela Davis</h3>
-      <p>blah blah</p>
-      <h3>Victor Anderson</h3>
-      <p>blah blah</p>
+      <h3>&nbsp;&nbsp;&nbsp; Angela Davis ⭐⭐⭐⭐</h3>
+      <p>
+        This place is breathtaking to the point where I just want to immerse
+        myself in the water or into the trunk of the largest tree.
+      </p>
+      <h3>&nbsp;&nbsp;&nbsp; Victor Anderson ⭐⭐⭐</h3>
+      <p>
+        The forest is huge, you can do so much and not be able to get to ever
+        inch of the place. The ocean is another story, once you look at it you
+        just want to swim and not come out.
+      </p>
+      <h3 id="edit" contenteditable="true">
+        &nbsp;&nbsp;&nbsp; Your Name & Rating ⭐⭐⭐⭐⭐
+      </h3>
+      <p>
+        ┍─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┓
+      </p>
+      <p id="edit" contenteditable="true">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Leave your
+        thoughts here!
+      </p>
+      <p>
+        ┖─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┙
+      </p>
     </section>
   </body>
 </html>
