update pages to match

--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
         <br><br>
     <nav>
         <ul>
-          <a href="#">Beginnings</a
-            >|
-            <a href="rain_point_trail.html">Rain Point Trail</a
-            >|
-            <a href="lake_emerald.html">Lake Emerald</a
-            >|
-            <a href="enchanted_forest.html">Enchanted Forest</a
-            >|
-            <a href="#">Location 5</a
-            >|
+          <a href="index.html">Beginnings</a> |
+          <a href="rain_point_trail.html">Rain Point Trail</a> |
+          <a href="lake_emerald.html">Lake Emerald</a> |
+          <a href="enchanted_forest.html">Enchanted Forest</a> |
+          <a href="#">Location 5</a> |
         </ul>
     </nav>
     <!---Title/Location summary of the story--->
-    <body>
-        <h1> <font color="red">The Traveling Lone Wanderer</font></h1>
+    <body bgcolor="lightblue">
+      <center>
+        <h1> <font color="darkred">The Traveling Lone Wanderer</font></h1>
         <p>︵‿︵‿︵‿︵︵‿︵‿︵‿︵︵‿︵‿︵‿︵︵‿︵‿︵‿︵</p>
             <section>
                 <h2>╰┈➤Act 1:-ˏˋ Busy Beginnings ˊˎ </h2>
@@ -42,7 +38,8 @@
         <source media="(min-width: 1280px)" srcset="img/trainstation-720p.png">
         <img src="img/trainstation-720p.png" alt="train station with people walking around"> 
     </picture>
-    
+  </center>
+
     <footer>
         <p>⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒</p><br>
         <p>HTML Archive Assignment: Alicia&nbspChi &amp Jozey&nbspNguyen</p><br>
