--- a/rain_point_trail.html
+++ b/rain_point_trail.html
@@ -10,14 +10,17 @@
     <nav>
         <ul>
             <!--- Delete previous locations excet the one that follows and the beginning --->
-            <a href="index.html">Beginnings</a>|
-            <a href="#">Rain Point Trail</a>|
-            <a href="#">Location 3</a>|
+            <a href="index.html">Beginnings</a> |
+            <a href="rain_point_trail.html">Rain Point Trail</a> |
+            <a href="lake_emerald.html">Lake Emerald</a> |
+            <a href="enchanted_forest.html">Enchanted Forest</a> |
+            <a href="#">Location 5</a> |
         </ul>
     </nav>
     <!---Title/Location summary of the story--->
-    <body>
-        <h1>➥Location #1: Rain Point Trail </h1>
+    <body bgcolor="lightblue">
+        <center>
+        <h1><font color="darkred">➥Location #1: Rain Point Trail</font></h1>
             <p>Steve decides to try going somewhere more local and do an activity to dip his feet in the surrounding area outside of the big city. After browsing through endless sites online he comes across something interesting…</p>
                 <pre>                                                                                                                       new experiences</pre>
         <p>─────────── ⋆⋅☆⋅⋆ ──────────</p>
@@ -46,6 +49,7 @@
         <source media="(min-width: 1280px)" srcset="img/rain-point-trail-720p.png"><!--- 1280px x 720px -->
         <img src="img/rain-point-trail-720p.png" alt="View of a valley with trees around during the day"> 
     </picture>
+        </center>
 
     <!---Comment/Review section (copy and paste format)--->
     <br> <p>✦•······················•✦•······················•✦</p>
@@ -53,16 +57,12 @@
                 <h2>REVIEWS/COMMENTS</h2>
                 <h3> &nbsp;&nbsp;&nbsp; Loura Pope ⭐⭐⭐</h3>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I did this hike from Kole Cove to the tip of the mountain and found it pretty easy. I started the hike later in the day than I should have, so I was rushing to make sure I didn&#39t end up hiking in the dark. It has a few difficult inclines! Once you get to the highest point of the trail, there are gorgeous sweeping views of the valley! It&#39s very pretty though.</p>
-            </section>
-
-            <section>
-                <h2>REVIEWS/COMMENTS</h2>
+            
                 <h3> &nbsp;&nbsp;&nbsp; Steve S. ⭐⭐⭐⭐</h3>
                 <p>┍────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┓</p>
                 <p id="edit" contenteditable="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Leave your thoughts here!</p>
                 <p>┖────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┙</p>
             </section>
-
             <p>✦•······················•✦•······················•✦</p>
     </body>
     <footer>
