--- a/enchanted_forest.html
+++ b/enchanted_forest.html
@@ -9,16 +9,16 @@
   <br /><br />
   <nav>
     <ul>
-      <a href="#">Beginnings</a
-      >|
-      <a href="rain_point_trail.html">Rain Point Trail</a
-      >|
-      <a href="lake_emerald.html">Lake Emerald</a
-      >|
-      <a href="enchanted_forest.html">Enchanted Forest</a
-      >|
-      <a href="#">Location 5</a
-      >|
+      <a href="index.html">Beginnings</a>
+      |
+      <a href="rain_point_trail.html">Rain Point Trail</a>
+      |
+      <a href="lake_emerald.html">Lake Emerald</a>
+      |
+      <a href="enchanted_forest.html">Enchanted Forest</a>
+      |
+      <a href="#">Location 5</a>
+      |
     </ul>
   </nav>
   <!---Title/Location summary of the story--->
@@ -68,6 +68,8 @@
     </center>
 
     <!---Comment/Review section (copy and paste format)--->
+    <br />
+    <p>✦•······················•✦•······················•✦</p>
     <section>
       <h2>REVIEWS/COMMENTS</h2>
       <h3>&nbsp;&nbsp;&nbsp; Angela Davis ⭐⭐⭐⭐</h3>
@@ -95,5 +97,15 @@
         ┖─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┙
       </p>
     </section>
+    <p>✦•······················•✦•······················•✦</p>
   </body>
+  <footer>
+    <br />
+    <p>₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪</p>
+    <br />
+    <p>HTML Archive Assignment: Alicia&nbspChi &amp Jozey&nbspNguyen</p>
+    <br />
+    <p>₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪</p>
+    <br />
+  </footer>
 </html>
