change jpg to png

--- a/enchanted_forest.html
+++ b/enchanted_forest.html
@@ -38,30 +38,38 @@
           ocean, he is refreshed and ready for a new day.
         </p>
       </section>
+      <p>─────────── ⋆⋅☆⋅⋆ ──────────</p>
+      <section>
+        Lake Emerald is the largest Alpine lake in North America. It is 1,645
+        feet deep, 22 miles long, 12 miles wide with 75 miles of shoreline. It
+        is the second deepest lake in America, next to Oregon’s Crater Lake.
+        Eight million people live less than a half day’s drive from the Basin.
+      </section>
+      <br />
       <!---Title/Location summary of the story--->
       <img
-        src="/img/bigsur-redwoodtrees.jpg"
+        src="/img/bigsur-redwoodtrees.png"
         alt="bigsur-redwoodtrees image"
         width="500"
       />
       <img
-        src="/img/bigsur-camping.jpg"
+        src="/img/bigsur-camping.png"
         alt="bigsur-camping image"
         width="500"
       />
       <img
-        src="/img/bigsur-waterfall.jpg"
+        src="/img/bigsur-waterfall.png"
         alt="bigsur-waterfall image"
         width="500"
       />
-      <img src="/img/bigsur-hike.jpg" alt="bigsur-hike image" width="500" />
+      <img src="/img/bigsur-hike.png" alt="bigsur-hike image" width="500" />
       <img
-        src="/img/bigsur-pfeiffer.jpg"
+        src="/img/bigsur-pfeiffer.png"
         alt="bigsur-pfeiffer image"
         width="500"
       />
       <img
-        src="/img/bigsur-coastalview.jpg"
+        src="/img/bigsur-coastalview.png"
         alt="bigsur-coastalview image"
         width="500"
       />
