--- a/lake_emerald.html
+++ b/lake_emerald.html
@@ -41,15 +41,23 @@
           part of his journey.
         </p>
       </section>
+      <p>─────────── ⋆⋅☆⋅⋆ ──────────</p>
+      <section>
+        Lake Emerald is the largest Alpine lake in North America. It is 1,645
+        feet deep, 22 miles long, 12 miles wide with 75 miles of shoreline. It
+        is the second deepest lake in America, next to Oregon’s Crater Lake.
+        Eight million people live less than a half day’s drive from the Basin.
+      </section>
+      <br />
       <!---Title/Location summary of the story--->
       <img
-        src="/img/laketahoe-water.jpg"
+        src="/img/laketahoe-water.png"
         alt="laketahoe-water image"
         width="500"
       />
-      <img src="/img/laketahoe.jpg" alt="laketahoe image" width="500" />
+      <img src="/img/laketahoe.png" alt="laketahoe image" width="500" />
       <img
-        src="/img/laketahoe-eastshore.jpg"
+        src="/img/laketahoe-eastshore.png"
         alt="laketahoe-eastshore image"
         width="500"
       />
