--- a/enchanted_forest.html
+++ b/enchanted_forest.html
@@ -9,18 +9,14 @@
   <br /><br />
   <nav>
     <ul>
-      <a href="index.html">Beginnings</a>
-      |
-      <a href="rain_point_trail.html">Rain Point Trail</a>
-      |
-      <a href="lake_emerald.html">Lake Emerald</a>
-      |
-      <a href="enchanted_forest.html">Enchanted Forest</a>
-      |
-      <a href="#">Location 5</a>
-      |
+        <!--- Delete previous locations excet the one that follows and the beginning --->
+        <a href="index.html">Beginnings</a> |
+        <a href="rain_point_trail.html">Rain Point Trail</a> |
+        <a href="lake_emerald.html">Lake Emerald</a> |
+        <a href="enchanted_forest.html">Enchanted Forest</a> |
+        <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a> |
     </ul>
-  </nav>
+</nav>
   <!---Title/Location summary of the story--->
   <body bgcolor="lightblue">
     <center>
@@ -48,28 +44,28 @@
       <br />
       <!---Title/Location summary of the story--->
       <img
-        src="/img/bigsur-redwoodtrees.png"
+        src="img/bigsur-redwoodtrees.png"
         alt="bigsur-redwoodtrees image"
         width="500"
       />
       <img
-        src="/img/bigsur-camping.png"
+        src="img/bigsur-camping.png"
         alt="bigsur-camping image"
         width="500"
       />
       <img
-        src="/img/bigsur-waterfall.png"
+        src="img/bigsur-waterfall.png"
         alt="bigsur-waterfall image"
         width="500"
       />
-      <img src="/img/bigsur-hike.png" alt="bigsur-hike image" width="500" />
+      <img src="img/bigsur-hike.png" alt="bigsur-hike image" width="500" />
       <img
-        src="/img/bigsur-pfeiffer.png"
+        src="img/bigsur-pfeiffer.png"
         alt="bigsur-pfeiffer image"
         width="500"
       />
       <img
-        src="/img/bigsur-coastalview.png"
+        src="img/bigsur-coastalview.png"
         alt="bigsur-coastalview image"
         width="500"
       />
