--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <br><br>
     <nav>
         <ul>
-          <a href="index.html">Beginnings</a> |
-          <a href="rain_point_trail.html">Rain Point Trail</a> |
-          <a href="lake_emerald.html">Lake Emerald</a> |
-          <a href="enchanted_forest.html">Enchanted Forest</a> |
-          <a href="#">Location 5</a> |
+            <!--- Delete previous locations excet the one that follows and the beginning --->
+            <a href="index.html">Beginnings</a> |
+            <a href="rain_point_trail.html">Rain Point Trail</a> |
+            <a href="lake_emerald.html">Lake Emerald</a> |
+            <a href="enchanted_forest.html">Enchanted Forest</a> |
+            <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a> |
         </ul>
     </nav>
     <!---Title/Location summary of the story--->
