--- a/lake_emerald.html
+++ b/lake_emerald.html
@@ -9,18 +9,14 @@
   <br /><br />
   <nav>
     <ul>
-      <a href="index.html">Beginnings</a>
-      |
-      <a href="rain_point_trail.html">Rain Point Trail</a>
-      |
-      <a href="lake_emerald.html">Lake Emerald</a>
-      |
-      <a href="enchanted_forest.html">Enchanted Forest</a>
-      |
-      <a href="#">Location 5</a>
-      |
+        <!--- Delete previous locations excet the one that follows and the beginning --->
+        <a href="index.html">Beginnings</a> |
+        <a href="rain_point_trail.html">Rain Point Trail</a> |
+        <a href="lake_emerald.html">Lake Emerald</a> |
+        <a href="enchanted_forest.html">Enchanted Forest</a> |
+        <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a> |
     </ul>
-  </nav>
+</nav>
   <!---Title/Location summary of the story--->
   <body bgcolor="lightblue">
     <center>
@@ -51,13 +47,13 @@
       <br />
       <!---Title/Location summary of the story--->
       <img
-        src="/img/laketahoe-water.png"
+        src="img/laketahoe-water.png"
         alt="laketahoe-water image"
         width="500"
       />
-      <img src="/img/laketahoe.png" alt="laketahoe image" width="500" />
+      <img src="img/laketahoe.png" alt="laketahoe image" width="500" />
       <img
-        src="/img/laketahoe-eastshore.png"
+        src="img/laketahoe-eastshore.png"
         alt="laketahoe-eastshore image"
         width="500"
       />
